; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_bcm63xx_udc.c_bcm63xx_ep0_internal_request.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_bcm63xx_udc.c_bcm63xx_ep0_internal_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm63xx_udc = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.usb_request }
%struct.usb_request = type { i32, i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bcm63xx_udc*, i32, i32)* @bcm63xx_ep0_internal_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcm63xx_ep0_internal_request(%struct.bcm63xx_udc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bcm63xx_udc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.usb_request*, align 8
  store %struct.bcm63xx_udc* %0, %struct.bcm63xx_udc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.bcm63xx_udc*, %struct.bcm63xx_udc** %4, align 8
  %9 = getelementptr inbounds %struct.bcm63xx_udc, %struct.bcm63xx_udc* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store %struct.usb_request* %10, %struct.usb_request** %7, align 8
  %11 = load %struct.bcm63xx_udc*, %struct.bcm63xx_udc** %4, align 8
  %12 = getelementptr inbounds %struct.bcm63xx_udc, %struct.bcm63xx_udc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.usb_request*, %struct.usb_request** %7, align 8
  %15 = getelementptr inbounds %struct.usb_request, %struct.usb_request* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.usb_request*, %struct.usb_request** %7, align 8
  %18 = getelementptr inbounds %struct.usb_request, %struct.usb_request* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = load %struct.usb_request*, %struct.usb_request** %7, align 8
  %20 = getelementptr inbounds %struct.usb_request, %struct.usb_request* %19, i32 0, i32 1
  store i32* null, i32** %20, align 8
  %21 = load %struct.bcm63xx_udc*, %struct.bcm63xx_udc** %4, align 8
  %22 = load i32, i32* %5, align 4
  %23 = load %struct.usb_request*, %struct.usb_request** %7, align 8
  %24 = call i32 @bcm63xx_ep0_map_write(%struct.bcm63xx_udc* %21, i32 %22, %struct.usb_request* %23)
  ret void
}

declare dso_local i32 @bcm63xx_ep0_map_write(%struct.bcm63xx_udc*, i32, %struct.usb_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
